_sass/style.scss
$accent: #4a00e0;
@function gen-shadow($depth) {
    $shadow-list: ();
    @for $i from 1 through $depth {
        $shadow-list: append($shadow-list, #{$i}px #{$i}px 0px $accent, comma);
    }
    @return $shadow-list;
}

.cursor {
    width: 2rem;
    height: 2rem;
    border: 2px solid $accent;
    border-radius: 50%;
    position: absolute;
    transform: translate(-50%, -50%);
    pointer-events: none;
    z-index: 2;
    transition: 0.1s, transform 0.5s, opacity, backdrop-filter 0.4s;
    opacity: 0;
    &.cursor-invert-change {
        backdrop-filter: invert(100%);
        transform: scale(2);
    }
    &.cursor-grow-change {
        transform: scale(1.5);
    }
    @media (pointer: coarse) {
        display: none;
    }
}

main:hover {
    .cursor {
        opacity: 1;
    }
}

.landing {
    height: 100vh;
    display: grid;
    align-items: center;
    padding-inline: 5rem;
    h1 {
        font-size: 4.6rem;
        font-weight: 400;
        line-height: 6.4rem;
        font-family: "Rubik Mono One", sans-serif;
        .hello-text {
            width: fit-content;
        }
        span {
            display: inline-block;
            text-shadow: gen-shadow(10);
            @keyframes shadow-animation {
                0% {
                    text-shadow: gen-shadow(10);
                }
                50% {
                    text-shadow: gen-shadow(4);
                }
                100% {
                    text-shadow: gen-shadow(10);
                }
            }
            &.animated {
                animation: 0.6s shadow-animation;
            }
        }
        .third-text {
            display: flex;
        }
    }
    p {
        margin-top: 1em;
        font-size: 1.2rem;
        font-weight: 600;
        color: rgba(255, 255, 255, 0.705);
    }
    @media screen and (max-width: 576px) {
        padding-inline: 2rem;
        h1 {
            font-size: 3.4rem;
            line-height: 4rem;
        }
    }
    @media screen and (max-width: 960px) {
        h1 {
            .third-text {
                display: block;
            }
        }
    }
}

.navbar {
    position: absolute;
    width: 100%;
    display: flex;
    justify-content: end;
    align-items: center;
    min-height: 13vh;
    padding-inline: 1rem;

    input[type="checkbox"] {
        display: none;
        visibility: hidden;
    }

    .bar {
        position: relative;
        width: 50px;
        height: 30px;
    }

    .bar span {
        position: absolute;
        width: 38px;
        height: 5px;
        background: #f1faee;
        border-radius: 100px;
        display: inline-block;
        transition: 0.3s ease;
        left: 0;
    }

    .bar span.top {
        top: 0;
    }

    .bar span.middle {
        top: 13px;
    }

    .bar span.bottom {
        bottom: 0px;
    }

    input[type]:checked ~ span.top {
        transform: translateY(-20px);
        opacity: 0;
    }

    input[type]:checked ~ span.middle {
        transform: rotate(45deg);
        transform-origin: top left;
        width: 48px;
        left: 4px;
        top: -9px;
    }

    input[type]:checked ~ span.bottom {
        transform: rotate(-45deg);
        transform-origin: top left;
        width: 48px;
    }
    .menu {
        &.active {
            top: 0;
            opacity: 1;
        }
        .close-btn {
            position: absolute;
            right: 8px;
            top: -12px;
            display: flex;
            align-items: center;
            i {
                font-size: 5rem;
            }
        }
        height: 100vh;
        width: 100%;
        position: absolute;
        z-index: 1;
        left: 0;
        top: -130vw;
        opacity: 0;
        padding: 5rem;
        background-color: rgb(26, 26, 26);
        display: flex;
        justify-content: space-between;
        transition: 1s;
        .nav-links {
            display: flex;
            flex-direction: column;
            list-style: none;
            gap: 2rem;
            font-size: 4rem;
        }
        .social-links {
            a:hover {
                color: #fbfbfb;
            }
            display: flex;
            width: 100%;
            list-style: none;
            gap: 3rem;
            font-size: 2rem;
            li {
                transition: 0.2s;
            }
            .github:hover {
                filter: drop-shadow(0 0 15px rgba(255, 255, 255, 0.664));
            }
            .stackover:hover {
                filter: drop-shadow(0 0 15px rgb(244, 129, 36));
            }
            .twitter:hover {
                filter: drop-shadow(0 0 15px rgb(29, 155, 240));
            }
        }
    }
}

.intro {
    background-color: black;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: grid;
    place-items: center;
}

.intro-text {
    padding-inline: 15rem;
    font-size: 1rem;
    color: rgb(252, 252, 252);
    font-family: "Rubik Mono One", sans-serif;
    .text {
        font-weight: 400;
    }
}

.slider {
    background-color: rgb(41, 41, 41);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transform: translateY(100%);
}

.hide {
    background-color: black;
    overflow: hidden;
    span {
        transform: translateY(100%);
        display: inline-block;
    }
}

.about-section {
    gap: 3rem;
    .about-text {
        p {
            font-size: 1.8rem;
            margin-block: 2rem;
            @media screen and (max-width: 576px) {
                font-size: 1.5rem;
            }
        }
        .about-call-to-action {
            position: absolute;
        }
    }
    .about-img {
        img {
            border-radius: 100%;
        }
    }
    @media screen and (max-width: 992px) {
        .about-img {
            display: none;
        }
    }
}

.skills-section {
    justify-content: space-between;
    align-items: center;
    .skill-canvas {
        @media screen and (max-width: 992px) {
                display: none;
        }
    }
    .skills-showcase {
        div {
            max-width: 30rem;
            margin-top: 1.5rem;
            ul {
                margin-top: 0.5rem;
                list-style: none;
                display: flex;
                flex-wrap: wrap;
                gap: 1rem;
                li {
                    border: 1px solid #4a00e0;
                    padding: 0.5rem 1rem;
                    transition: 0.3s ease;
                    display: inline-block;
                    box-shadow: gen-shadow(4);
                    &:hover {
                        box-shadow: gen-shadow(2);
                    }
                }
            }
        }
    }
}

.projects-section {
    .projects {
        width: 100%;
        .portfolio-container {
            display: grid;
            grid-template-columns: repeat(auto-fit, minmax(auto, 28rem));
            grid-auto-rows: 13rem;
            @media screen and (max-width: 576px) {
                grid-auto-rows: auto;
            }
            justify-content: center;
            gap: 1rem;
            .project {
                .project-link div div {
                    @media screen and (max-width: 576px) {
                        flex-direction: column-reverse;
                        align-items: flex-start !important;
                    }
                }
                border-radius: 1rem;
                margin-inline: auto;
                width: 100%;
                display: grid;
                align-items: center;
                border: 2px solid $accent;
                padding: 1.5rem;
                &:hover {
                    opacity: 70% !important;
                }
                .more-info {
                    display: flex;
                    justify-content: space-between;
                    gap: 1rem;
                    & > * {
                        min-width: 3rem;
                        text-align: center;
                        height: fit-content;
                        display: inline-block;
                        background: $accent;
                        font-weight: 500;
                        padding: 0.2rem 0.3rem;
                        border-radius: 0.7rem;
                    }
                }
            }
        }
    }
}

.contact-section {
    gap: 3rem;
    & > div {
        flex: 1 1 0px;
    }
    .more-info {
        ul {
            list-style: none;
        }
        .personal-info {
            display: flex;
            flex-direction: column;
            gap: 0.5rem;
        }
        .social {
            display: flex;
            gap: 1rem;
            font-size: 2rem;
        }
    }
    .contact-form {
        max-width: 40rem;
        .name {
            grid-area: name;
        }
        .email {
            grid-area: email;
        }
        .subject {
            grid-area: subject;
        }
        .message {
            grid-area: message;
        }
        .submit {
            grid-area: submit;
        }
        display: grid;
        gap: 1rem;
        grid-template-areas:
            "name email"
            "subject subject"
            "message message"
            "submit submit";
        input,
        textarea {
            border: none;
            font-family: "Montserrat", sans-serif;
            border-bottom: 2px solid transparent;
            outline: none;
            padding: 1rem 1.5rem;
            font-size: 1rem;
            width: 100%;
            background-color: #0f0f0f;
            transition: 0.4s;
            resize: none;
            &:focus {
                border-bottom: 2px solid #4a00e0;
            }
        }
        button {
            margin-inline-end: auto;
        }
    }
}

footer {
    background-color: #0f0f0f;
    text-align: center;
    padding-block: 2rem;
}
.split-item {
    display: inline-block;
}

